# RapidPro-Discord-Proxy

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml.example  entrypoint  pyproject.toml
codegen/: models.py
rapidprodiscordproxy/: __init__.py  config.py  discord_handler.py  main.py
tests/: test_rapidprodiscordproxy.py
