[tool.poetry]
name = "rapidprodiscordproxy"
version = "0.0.1"
description = "A simple proxy application that handles the persistent gateway connection required to recieve discord messages, and forwards the messages to a webhook, and sends messages it recieves from a webhook."
authors = ["Awen Saunders <me@awen.io>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
fastapi = "^0.60.1"
uvicorn = "^0.11.6"
nest_asyncio = "^1.4.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
